# CodBusudhego

./: .gitignore  CMakeLists.txt  README.md  Urok2.cpp
Module 1/Razdel_1/Urok1/: program.txt  zadanie1_1.cpp
Module 1/Razdel_1/Urok2/: Program.txt
Module 1/Razdel_1/Urok3/: zadanie1_3.cpp
Module 1/Razdel_1/Urok4/: zadanie1_4.cpp
Module 1/Razdel_2/Lesson_1/: lesson2_1.cpp
Module 1/Razdel_2/Lesson_3/: Lesson2_3.cpp
Module 1/Razdel_2/Lesson_4/: Lesson2_4.cpp
Module 1/Razdel_2/Lesson_6/: Lesson2_6.cpp
Module 1/Razdel_3/Lesson_1/: Lesson3_1.cpp
Module 1/Razdel_3/Lesson_3/: Lesson3_3.cpp
Module 1/Razdel_3/Lesson_6/: Lesson3_6.cpp
Module3/Razdel_2/: 2_1.cpp  2_2.cpp  2_3.cpp  2_4.cpp  2_5.cpp  2_6.cpp
Module3/Razdel_3/: 3_1.cpp  3_2.cpp  3_3.cpp  3_4.cpp  3_5.cpp  3_6.cpp
Module4/Razdel_1/: 1_1.cpp  1_2.cpp  1_3.cpp  1_4.cpp  1_5.cpp  1_6.cpp  1_7.cpp  1_8.cpp  1_9.cpp
Module4/Razdel_2/: 2_1.cpp  2_2.cpp  2_3.cpp  2_4.cpp  2_5.cpp  2_6.cpp  2_7.cpp  2_8.cpp
Razdel_1/Urok1/: program.txt
Razdel_1/Urok2/: readme.md  zadanie.txt  zadanie1_2.cpp
Razdel_1/Urok4/: praktika.cpp
Razdel_1/Urok5/: zadanie1_5.cpp
Razdel_1/urok6/: zadanie1_6.cpp
Razdel_2/Lesson_1/: lesson1_1.cpp
Razdel_2/Lesson_2/: Lesson2_2.cpp
Razdel_2/Lesson_3/: Lesson2_3.cpp
Razdel_2/Lesson_5/: Lesson2_5.cpp
Razdel_2/Lesson_6/: Lesson2_6.cpp
Razdel_3/Lesson_1/: Lesson3_1.cpp
Razdel_3/Lesson_2/: Lesson3_2.cpp
Razdel_3/Lesson_4/: Lesson3_4.cpp
Razdel_3/Lesson_5/: Lesson3_5.cpp
Razdel_3/Lesson_6/: Lesson3_6.cpp
chatGPT/praktika/: zadanie1.cpp
(+23 files in other folders)
