cmake_minimum_required(VERSION 3.26)
project(CodBusudhego)

set(CMAKE_CXX_STANDARD 23)

add_executable(CodBusudhego
        "Module 1/Razdel_1/Urok2/zadanie1.cpp"
        "Module 1/Razdel_1/Urok1/zadanie.cpp"
        "Module 1/Razdel_1/Urok3/zadanie1_3.cpp"
        "Module 1/Razdel_1/Urok4/zadanie1_4.cpp"
        "Module 1/Razdel_1/Urok4/praktika.cpp"
        chatGPT/praktika/zadanie1.cpp
        "Module 1/Razdel_1/urok6/zadanie1_6.cpp"
        "Module 1/Razdel_1/urok6/zadanie1_6.cpp"
        "Module 1/Razdel_2/Lesson_1/lesson1_1.cpp"
        "Module 1/Razdel_2/Lesson_1/lesson1_1.cpp"
)
